Reorder files and change file paths

--- a/vignettes/CaseStudies/LEON-T/20241123 testing LEON-T output.Rmd
+++ b/vignettes/CaseStudies/LEON-T/20241123 testing LEON-T output.Rmd
@@ -135,7 +135,7 @@ rm(list = objects())
 abspath_EU = "/rivm/r/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/DPMFA_EU.RData"
 abspath_NL = "/rivm/r/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/DPMFA_NL.RData" # data file location
 source_of_interest = "Tyre wear" # a specific source or NA for all
-path_parameters_file = "vignettes/CaseStudies/CaseData/Microplastic_variables_v1.xlsx"
+path_parameters_file = "vignettes/CaseStudies/LEON-T/Microplastic_variables_v1.1c.xlsx"
 TESTING = F # if set to T, using only first 2 runs.
 
 library(tidyverse)
@@ -275,7 +275,7 @@ Material_Parameters_long <- Material_Parameters_n |>
   ungroup() |>
   unnest(data)
 
-source("vignettes/CaseStudies/f_plot_functions.R")
+source("vignettes/CaseStudies/LEON-T/f_plot_functions.R")
 
 ```
 
