--- a/vignettes/CaseStudies/LEON-T/DPMFA_LEON-T_TRWP_casestudy.Rmd
+++ b/vignettes/CaseStudies/LEON-T/DPMFA_LEON-T_TRWP_casestudy.Rmd
@@ -61,70 +61,77 @@ source("vignettes/CaseStudies/LEON-T/02_get_Parameters.R")
 # load Parameters object from file if not already in memory
 load(paste0("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/Parameters_LEON-T_D3.5_TWP_20241130.RData"))
 
-Material_Parameters_n <- Parameters$Material_Parameters_n
-#Example of plot:
-#TODO: include units
+Material_Parameters_n <- Parameters$Material_Parameters_n |>
+  mutate(VarName_Unit = case_when(
+    !is.na(Unit) ~ paste0(VarName, " (", Unit, ")"),
+    TRUE ~ VarName
+  ))
 
 PlotVariable = "alpha"
 ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |> unnest(data), aes(x=value,y=SubCompart)) +
   geom_violin()+
   facet_wrap(vars(Polymer,Species))+
-  xlab(PlotVariable)+ scale_x_log10() 
+  xlab(unique(Material_Parameters_n$VarName_Unit[Material_Parameters_n$VarName == PlotVariable])) + scale_x_log10()
 
 PlotVariable = "RadS"
 ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |> unnest(data), aes(x=value,y=VarName)) +
   geom_violin()+
   facet_wrap(vars(Polymer,Source))+
-  xlab(paste(PlotVariable)) + scale_x_log10() 
+  xlab(unique(Material_Parameters_n$VarName_Unit[Material_Parameters_n$VarName == PlotVariable])) + scale_x_log10() 
 
 PlotVariable = "RhoS"
 ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |> unnest(data), aes(x=value,y=VarName)) +
   geom_violin()+
   facet_wrap(vars(Polymer,Source))+
-  xlab(paste(PlotVariable)) 
+  xlab(unique(Material_Parameters_n$VarName_Unit[Material_Parameters_n$VarName == PlotVariable])) 
 
 PlotVariable = "kdeg"
 ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |>
          filter(Species != "Unbound") |> unnest(data), aes(x=value,y=SubCompart)) +
   geom_violin()+
   facet_wrap(vars(Polymer,Species))+
-  xlab(paste(PlotVariable))  + scale_x_log10() 
+  xlab(unique(Material_Parameters_n$VarName_Unit[Material_Parameters_n$VarName == PlotVariable]))  + scale_x_log10() 
 
 PlotVariable = "kfrag"
 ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |> 
          filter(Species != "Solid") |>unnest(data), aes(x=value,y=SubCompart)) +
   geom_violin()+
   facet_wrap(vars(Polymer,Species))+
-  xlab(paste(PlotVariable))  + scale_x_log10() 
+  xlab(unique(Material_Parameters_n$VarName_Unit[Material_Parameters_n$VarName == PlotVariable]))  + scale_x_log10() 
 
 # load Parameters object from file if not already in memory
 load(paste0("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/Parameters_LEON-T_D3.5_Other_20241130.RData"))
-Material_Parameters_n <- Parameters$Material_Parameters_n
+Material_Parameters_n <- Parameters$Material_Parameters_n |>
+  mutate(VarName_Unit = case_when(
+    !is.na(Unit) ~ paste0(VarName, " (", Unit, ")"),
+    TRUE ~ VarName
+  ))
+
 PlotVariable = "alpha"
 ggplot(Material_Parameters_n |> filter(VarName == PlotVariable & Polymer == "ABS") |> unnest(data), aes(x=value,y=SubCompart)) +
   geom_violin()+
   facet_wrap(vars(Polymer,Species))+
-  xlab(PlotVariable)+ scale_x_log10() 
+  xlab(unique(Material_Parameters_n$VarName_Unit[Material_Parameters_n$VarName == PlotVariable]))+ scale_x_log10() 
 # above alpha's the same for all polymers
 
 PlotVariable = "RadS"
 ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |> unnest(data), aes(x=value,y=VarName)) +
   geom_violin()+
   facet_wrap(vars(Polymer))+
-  xlab(paste(PlotVariable)) + scale_x_log10() 
+  xlab(unique(Material_Parameters_n$VarName_Unit[Material_Parameters_n$VarName == PlotVariable])) + scale_x_log10() 
 
 PlotVariable = "RhoS"
 ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |> unnest(data), aes(x=value,y=VarName)) +
   geom_violin()+
   facet_wrap(vars(Polymer))+
-  xlab(paste(PlotVariable)) 
+  xlab(unique(Material_Parameters_n$VarName_Unit[Material_Parameters_n$VarName == PlotVariable])) 
 
 PlotVariable = "kdeg"
 ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |>
          filter(Species != "Unbound") |> unnest(data), aes(x=value,y=SubCompart)) +
   geom_violin()+
   facet_wrap(vars(Polymer,Species))+
-  xlab(paste(PlotVariable))  + scale_x_log10() 
+  xlab(unique(Material_Parameters_n$VarName_Unit[Material_Parameters_n$VarName == PlotVariable]))  + scale_x_log10() 
 # aboev kdeg same for all polymers
 
 PlotVariable = "kfrag"
@@ -132,7 +139,7 @@ ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |>
          filter(Species != "Solid") |>unnest(data), aes(x=value,y=SubCompart)) +
   geom_violin()+
   facet_wrap(vars(Polymer,Species))+
-  xlab(paste(PlotVariable))  + scale_x_log10() 
+  xlab(unique(Material_Parameters_n$VarName_Unit[Material_Parameters_n$VarName == PlotVariable]))  + scale_x_log10() 
 
 ```
 
@@ -142,7 +149,7 @@ Seperately following the SBR and NR fractions.
 ```{r}
 # run the script:
 source("vignettes/CaseStudies/LEON-T/03ff_get_solution_FateFactors.R")
-# analysis is done sepeperately using xls.
+# analysis is done separately using xls.
 
 ```
 
@@ -289,9 +296,6 @@ ggplot(SpeciesP_long |> filter(SubCompart == "othersoil") ,aes (x=value,y = SubC
   facet_wrap(vars(Polymer,Source))+
   xlab(paste(PlotVariable)) + scale_x_log10() 
 
-
-
-
 PlotVariables = "RadS"
 ggplot(Parameters$Material_Parameters_n |> filter(VarName %in% PlotVariables) |> unnest(data), aes(x=value,y=VarName)) +
   geom_violin()+
@@ -359,7 +363,7 @@ source("vignettes/CaseStudies/LEON-T/06_save_emission_figure_data.R")
 
 # Make emission output figures
 This script was used to make the DPMFA output figures. Please change the filepaths 
-at the beginning of the script to the 
+at the beginning of the script to the filepaths to the datasets on your computer.
 
 ```{r 08: Make DPMFA output figures}
 source("vignettes/CaseStudies/LEON-T/08_emission_figures_D3.5.R")
