--- a/vignettes/Getting started.Rmd
+++ b/vignettes/Getting started.Rmd
@@ -102,12 +102,14 @@ if(substance == "microplastic"){
 
 Now that the World is initialized, its variables and calculated flows
 can be accessed. To access these variables and k's, first the names of
-the variables are needed:
+the variables are needed. They can be accessed by using the code below. 
+The first 10 variable names are printed, but there are `r length(World$fetchData())` 
+variables in total.
 
 ```{r Get variable names, include=TRUE, warning=FALSE}
 varnames <- World$fetchData()
 
-print(varnames)
+print(varnames[1:10])
 ```
 
 ### Access variables
@@ -165,10 +167,10 @@ World$UpdateDirty("TotalArea")
 
 When using World$fetchData(), sometimes a value is returned instead of a dataframe. 
 In that case we can still use the mutateVars() function, but give the function a named value instead of a dataframe.
-```{r Change substance variable, include=TRUE, warning=FALSE}
-# See the original value
-kable(World$fetchData("MW"))
 
+The default molecular weight for this substance is `r World$fetchData("MW")`.
+After the chuck below, the value should be 0.15.
+```{r Change substance variable, include=TRUE, warning=FALSE}
 # Make a dataframe where varName = MW and Waarde is 150 
 MW_df <- data.frame(varName = "MW",
                         Waarde = 150) # In g/mol, will be converted to SI unit (kg/mol) in the core. 
@@ -176,12 +178,11 @@ MW_df <- data.frame(varName = "MW",
 # Use mutateVars() to update the variable
 World$mutateVars(MW_df)
 
-# See if the value is updated
-kable(World$fetchData("MW"))
-
 # Recalculate all variables dependent on MW
 World$UpdateDirty("MW")
 ```
+
+After changing the molecular weight, the value is `r World$fetchData("MW")`.
 
 ## Calculate steady state output
 
